# mlx-convert-scripts

./: .env  .gitignore  README.md  pyproject.toml
results/: .gitignore  results-imagenet-1k.csv
scripts/: convert_efficientnet_weights.py  convert_mobilenet_weights.py  convert_mobilenetv2_weights.py  convert_mobilenetv3_weights.py  validate_efficientnet.sh  validate_mobilenetv2.sh  validate_mobilenetv3.sh
val_config/: validation_efficientnet_b0.yaml  validation_efficientnet_b1.yaml  validation_efficientnet_b2.yaml  validation_efficientnet_b3.yaml  validation_efficientnet_b4.yaml  validation_efficientnet_b5.yaml  validation_efficientnet_b6.yaml  validation_efficientnet_b7.yaml  validation_mobilenet_v2.yaml  validation_mobilenet_v3_large.yaml  validation_mobilenet_v3_small.yaml
