[project]
name = "mlx-convert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations==1.4.1",
    "huggingface-hub==0.24.0",
    "mlx==0.24.2",
    "numpy==1.26.2",
    "opencv-python==4.9.0.80",
    "pandas==2.2.1",
    "safetensors>=0.6.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
